project modify test

--- a/_config.yml
+++ b/_config.yml
@@ -60,23 +60,19 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
         title: Project 1
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
+          Date
+          Content
       - layout: left
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
         title: Project 2
         description: | # this will include new lines to allow paragraphs
           Description about the work on/with the project
       - layout: left
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: Project 2
+        title: Project 3
         description: | # this will include new lines to allow paragraphs
           Description about the work on/with the project
+
   - title: Experience
     layout: list
     content:
