--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   My particular interest in how to collect and refine data to create meaningful machine learning data and how to design a network effectively.
 
-  [Here](./assets/portfolio_PT_김지수_compressed.pdf) is my development portfolio.
+  [Here](./assets/Portfolio_Kevin_Jisu_Kim.pdf) is my development portfolio.
 
 content:
   - title: Projects # Title for the section
