feat: labzine interview 추가

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   [Here](./assets/Portfolio_Kevin_Jisu_Kim.pdf) is my development portfolio.
 
-  A new [interview](https://www.lomin.ai/interview/ml-engineer-jisu) has been posted on LinkedIn. It will also be published on [Labzine](http://labzine.co.kr) soon.
+  [Here](http://labzine.co.kr/resources/image/pdf/view.jsp?filename=98f9f5f5-5f0d-44dd-9534-fb500face18f.pdf#page=64) is a new interview published on [Labzine](http://labzine.co.kr)!
 
 content:
   - title: Projects # Title for the section
