--- a/_config.yml
+++ b/_config.yml
@@ -63,17 +63,60 @@ about_content: | # this will include new lines to allow paragraphs
   [Here](http://labzine.co.kr/resources/image/pdf/view.jsp?filename=98f9f5f5-5f0d-44dd-9534-fb500face18f.pdf#page=64) is a new interview published on [Labzine](http://labzine.co.kr)!
 
 content:
+  - title: Career
+    layout: list
+    content:
+      - layout: left
+        border: weak
+        title: Lomin
+        sub_title: Machine learning team lead
+        caption: Mar. 2025 ~ present
+        description: | # this will include new lines to allow paragraphs
+          - Machine learning team lead managing a team of 4 machine learning engineers
+          - Manage projects and team members to achieve the best results
+          - Maintain and improve the quality of the team's development results(e.g., codes, service pipelines, etc.)
+
+      - layout: left
+        border: weak
+        title: Lomin
+        sub_title: Machine learning research engineer
+        caption: Oct. 2023 ~ present
+        description: | # this will include new lines to allow paragraphs
+          - Machine learning research engineer conducting research on document understanding
+          - Conduct multi-modal research to comprehend various documents visually and contextually
+          - Model optimization and lightweighting for model inference in diverse environments
+          - Development was mainly carried out using python, and model construction was carried out using and pytorch
+
+      - layout: left
+        border: weak
+        title: Archidraw
+        sub_title: Machine learning software engineer
+        caption: Mar. 2022 ~ Oct. 2023
+        description: | # this will include new lines to allow paragraphs
+          - Machine learning software engineer responsible for overall development of artificial intelligence-related features provided by 3D interior solution archisketch
+          - Provide artificial intelligence services by organizing and learning various models by collecting data from various services, including editors and dashboards provided by Archisketch, and refining the data to suit the necessary functions to be utilized
+          - Development of capabilities that automate internal data processing and processing to help process tasks in-house
+          - Help users use services by automating difficult tasks such as furniture placement or preprocessing for drawing image recognition
+          - Development was mainly carried out using python, and model construction was carried out using tensorflow and pytorch
+      
+      - layout: left
+        title: Plug N Play
+        sub_title: A one-man developer
+        caption: Oct. 2021 ~ Feb. 2022
+        description: | # this will include new lines to allow paragraphs
+          - Responsible for data collection and refinement, model construction and implementation, and the creation and distribution of alpha version service pages, as a one-man developer of AI project PLUK
+
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: right
         border: weak
         title: Lomin
         caption: Oct. 2023 ~ present
         description: | # this will include new lines to allow paragraphs
           **Development of a model understanding postal documents**
 
-          *(Oct. 2024 ~ Present)*
+          *(Oct. 2024 ~ Dec. 2024)*
 
           - Develop a model to understand postal documents and extract the necessary information
           - Contribute to the automation of a significant portion of postal office operations
@@ -150,7 +193,7 @@ content:
           - Ultimately convert all problems within the workbook into individual datasets
           - ***Client***: Visang Education
 
-      - layout: left
+      - layout: right
         border: weak
         title: Archidraw
         caption: Mar. 2022 ~ Oct. 2023
@@ -241,7 +284,7 @@ content:
           
           - Develop a model for inferring the room type of a render shot generated on the Archisketch platform
 
-      - layout: left
+      - layout: right
         title: Plug N Play
         caption: Oct. 2021 ~ Feb. 2022
         description: | # this will include new lines to allow paragraphs
@@ -251,39 +294,6 @@ content:
 
           - Develop an artist-friendly platform called "PLUK" that analyzes the sound sources of the market through its own algorithm to learn the characteristics and performance of the sound source, predicts the performance of the new sound source, and provides a guide to composition
           - [**Article about PLUK**](https://www.news1.kr/articles/?4595881)
-
-  - title: Career
-    layout: list
-    content:
-      - layout: right
-        border: weak
-        title: Lomin
-        sub_title: Machine learning research engineer
-        caption: Oct. 2023 ~ present
-        description: | # this will include new lines to allow paragraphs
-          - Machine learning research engineer conducting research on document understanding
-          - Conduct multi-modal research to comprehend various documents visually and contextually
-          - Model optimization and lightweighting for model inference in diverse environments
-          - Development was mainly carried out using python, and model construction was carried out using and pytorch
-
-      - layout: right
-        border: weak
-        title: Archidraw
-        sub_title: Machine learning software engineer
-        caption: Mar. 2022 ~ Oct. 2023
-        description: | # this will include new lines to allow paragraphs
-          - Machine learning software engineer responsible for overall development of artificial intelligence-related features provided by 3D interior solution archisketch
-          - Provide artificial intelligence services by organizing and learning various models by collecting data from various services, including editors and dashboards provided by Archisketch, and refining the data to suit the necessary functions to be utilized
-          - Development of capabilities that automate internal data processing and processing to help process tasks in-house
-          - Help users use services by automating difficult tasks such as furniture placement or preprocessing for drawing image recognition
-          - Development was mainly carried out using python, and model construction was carried out using tensorflow and pytorch
-      
-      - layout: right
-        title: Plug N Play
-        sub_title: A one-man developer
-        caption: Oct. 2021 ~ Feb. 2022
-        description: | # this will include new lines to allow paragraphs
-          - Responsible for data collection and refinement, model construction and implementation, and the creation and distribution of alpha version service pages, as a one-man developer of AI project PLUK
 
   - title: Education
     layout: list
